# toto

./: LICENSE-3rdparty.csv  README.md
.github/workflows/: pypi-publish-dd-unit-scaling.yml  pypi-publish-toto-models.yml  pypi-publish.yml
boom/breakdown_tabels/: domain_CRPS_shifted_gmean.csv  domain_MASE_shifted_gmean.csv  full_benchmark_CRPS_shifted_gmean.csv  full_benchmark_MASE_shifted_gmean.csv  real_term_CRPS_shifted_gmean.csv  real_term_MASE_shifted_gmean.csv  type_CRPS_shifted_gmean.csv  type_MASE_shifted_gmean.csv
boom/leaderboards/: boom_leaderboard.csv  boomlet_leaderboard.csv
boom/results/toto_2.0_1b/: all_results.csv
boom/results/toto_2.0_2.5b/: all_results.csv
boom/results/toto_2.0_22m/: all_results.csv
boom/results/toto_2.0_313m/: all_results.csv
boom/results/toto_2.0_4m/: all_results.csv
dd_unit_scaling/: README.md  pyproject.toml
toto2/: README.md  pyproject.toml
toto2/notebooks/: gluonts_integration.ipynb  quick_start.ipynb
toto2/toto2/: configuration.py  model.py
toto_models/: README.md  pyproject.toml
